; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_pull.c_argv_push_force.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_pull.c_argv_push_force.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.argv_array = type { i32 }

@opt_force = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"-f\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.argv_array*)* @argv_push_force to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @argv_push_force(%struct.argv_array* %0) #0 {
  %2 = alloca %struct.argv_array*, align 8
  %3 = alloca i32, align 4
  store %struct.argv_array* %0, %struct.argv_array** %2, align 8
  %4 = load i32, i32* @opt_force, align 4
  store i32 %4, i32* %3, align 4
  br label %5

5:                                                ; preds = %9, %1
  %6 = load i32, i32* %3, align 4
  %7 = add nsw i32 %6, -1
  store i32 %7, i32* %3, align 4
  %8 = icmp sgt i32 %6, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %5
  %10 = load %struct.argv_array*, %struct.argv_array** %2, align 8
  %11 = call i32 @argv_array_push(%struct.argv_array* %10, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  br label %5

12:                                               ; preds = %5
  ret void
}

declare dso_local i32 @argv_array_push(%struct.argv_array*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
